[tool.poetry]
name = "coffeemachine"
version = "0.1.0"
description = "A CLI Coffee Machine"
license = "MIT"
authors = ["Philippe Costa <philippe.sa.costa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.scripts]
coffee = 'coffeemachine.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
